RESOLVED FIXED200248
Owners of MultiChannelResampler should make sure that the output bus given to it has the same number of channels
https://bugs.webkit.org/show_bug.cgi?id=200248
Summary Owners of MultiChannelResampler should make sure that the output bus given to...
youenn fablet
Reported 2019-07-29 15:10:52 PDT
WebAudioSourceProviderAVFObjC should not call its clients for new samples if it is scheduling a task to change the audio format
Attachments
Patch (14.05 KB, patch)
2019-07-30 14:29 PDT, youenn fablet
no flags
Patch for landing (14.06 KB, patch)
2019-07-31 09:40 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-07-29 15:11:30 PDT
youenn fablet
Comment 2 2019-07-30 14:29:28 PDT
EWS Watchlist
Comment 3 2019-07-30 14:32:03 PDT
Attachment 375179 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/RealtimeMediaSource.h:175: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 4 2019-07-31 05:36:52 PDT
Comment on attachment 375179 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=375179&action=review > Source/WebCore/ChangeLog:9 > + When a track number of channels is changing, MediaStreamAudioSourceNode is expected Nit: s/track number of channels is changing/track's number of channels changes/ > Source/WebCore/ChangeLog:11 > + MultiChannelResampler expects to have the same amount of channels as the output Nit: s/amount/number/
youenn fablet
Comment 5 2019-07-31 09:40:37 PDT
Created attachment 375228 [details] Patch for landing
EWS Watchlist
Comment 6 2019-07-31 09:44:37 PDT
Attachment 375228 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/RealtimeMediaSource.h:175: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 7 2019-07-31 10:31:23 PDT
Comment on attachment 375228 [details] Patch for landing Clearing flags on attachment: 375228 Committed r248046: <https://trac.webkit.org/changeset/248046>
WebKit Commit Bot
Comment 8 2019-07-31 10:31:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.