Source/WebCore/platform/audio/MultiChannelResampler.cpp
@@ -102,6 +102,8 @@ MultiChannelResampler::MultiChannelResampler(double scaleFactor, unsigned number
 
 void MultiChannelResampler::process(AudioSourceProvider* provider, AudioBus* destination, size_t framesToProcess)
 {
+    ASSERT(m_numberOfChannels == destination->numberOfChannels());
+
     // The provider can provide us with multi-channel audio data. But each of our single-channel resamplers (kernels)
     // below requires a provider which provides a single unique channel of data.
     // channelProvider wraps the original multi-channel provider and dishes out one channel at a time.
